add roles and members, add init roles for owner and members
