# Backend/src/main/java/com/anteiku/backend/delegate/OrganizationMembersApiDelegate.java
@@ -9,6 +9,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.List;
 import java.util.UUID;
 
 @RestController
@@ -29,4 +30,9 @@ public class OrganizationMembersApiDelegate implements MembersApi {
         return ResponseEntity.noContent().build();
     }
 
+    @Override
+    public ResponseEntity<Void> updateMemberRoles(UUID memberId, List<UUID> roleIds) {
+        organizationMemberService.updateMemberRoles(memberId, roleIds);
+        return ResponseEntity.ok().build();
+    }
 }
